fix: fix cta spacing for all hero cta buttons

--- a/web/themes/interledger/css/components/hero.css
+++ b/web/themes/interledger/css/components/hero.css
@@ -60,7 +60,7 @@
   border-radius: var(--border-radius);
 }
 
-.hero--photography .hero__cta {
+.hero__cta {
   margin-block-start: var(--space-m);
 }
 
